ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-routing
spec:
  rules:
  - host: mujib.com
    http: 
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: fleetman-webapp
            port:
              number: 80
  - host: queue.mujib.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fleetman-queue
            port:
              number: 8161
